feat server: add yaml handle
